# mp3encoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: encoding_pool.cpp  encoding_pool.h  main.cpp  mp3_file.cpp  mp3_file.h  wave_file.cpp  wave_file.h
